--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="pref_sort_by_key">sort_option</string>
     <string name="pref_default_sort_by">vote_average.desc</string>
     <string name="title_action_settings">Settings</string>
+    <string name="movie_title">Movie Title</string>
+    <string name="description_text">Plot goes here ... this could be a longer text area with 3-4 lines....</string>
+    <string name="releaseDateText">Release Date unavailable</string>
+    <string name="ratingText">Rating unavailable</string>
 </resources>
