Save Initial Trailers UI and Fetch extras methods Also tried out Butterknife.  .idea/misc.xml has lanuageLevel from JDK_1_7 to 8... I did not manually changed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     </string>
     <string name="releaseDateText">Release Date unavailable</string>
     <string name="ratingText">Rating unavailable</string>
+    <string name="trailers">Trailers:</string>
+    <string name="trailersList">Trailer</string>
 </resources>
