--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="trailersList">Trailer</string>
     <string name="reviews">Reviews:</string>
     <string name="reviewsList">Reviews:</string>
+    <string name="title_activity_reviews">Read Reviews</string>
 </resources>
