--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_activity_reviews">Read Reviews</string>
     <string name="markFavorite">Mark As Favorite</string>
     <string name="action_share">Share</string>
+    <string name="markRemove">Remove</string>
 </resources>
